# wildweek

./: .gitignore  README.md  pothiers-profile.org  pyproject.toml  sample.csv  scheduler.py  tasks.csv  wildweek.cfg  wildweek.conf  wildweek.py
tests/: test_scheduler.py  test_wildweek.py
